<resources>
    <string name="app_name">Wheel of Fortune</string>

    <!--MAIN ACTIVITY UI-->
    <string name="new_game_button">New Game</string>
    <string name="spin_wheel_button">Spin Wheel</string>
    <string name="guess_consonant">Guess Consonant</string>
    <string name="buy_vowel_button">Buy Vowel</string>
    <string name="solve_puzzle_button">Solve Puzzle</string>
    <string name="change_turn_button">Change Turn</string>

    <!--DISPLAY UI-->
    <string name="player_one_name">PLAYER 1</string>
    <string name="player_two_name">PLAYER 2</string>
    <string name="player_three_name">PLAYER 3</string>
    <string name="placeholder_money">$0</string>
    <string name="category_placeholder">CATEGORY</string>
    <string name="switch_player_button">Switch Player</string>
    <string name="letters_guessed">LETTERS GUESSED</string>


</resources>
