<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".main.MainActivity">

    <GridView
        android:id="@+id/puzzle_grid_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/black"
        android:columnWidth="50dp"
        android:horizontalSpacing="4dp"
        android:numColumns="14"
        android:padding="4dp"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:verticalSpacing="4dp" />

    <TextView
        android:id="@+id/puzzle_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/puzzle_grid_view"
        android:gravity="center"
        android:text="@string/category_placeholder"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <RelativeLayout
            android:id="@+id/player_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/player_one_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_above="@id/player_one_score"
                android:src="@drawable/geisha"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/player_one_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/player_one_score"
                android:layout_alignTop="@id/player_one_icon"
                android:layout_toEndOf="@id/player_one_icon"
                android:gravity="center"
                android:text="@string/player_one_name"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/player_one_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/wof_red"
                android:gravity="center"
                android:text="@string/placeholder_money"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/player_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/player_two_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_above="@id/player_two_score"
                android:src="@drawable/nun"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/player_two_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/player_two_score"
                android:layout_alignTop="@id/player_two_icon"
                android:layout_toEndOf="@id/player_two_icon"
                android:gravity="center"
                android:text="@string/player_two_name"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/player_two_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/wof_yellow"
                android:gravity="center"
                android:text="@string/placeholder_money"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/player_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/player_three_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_above="@id/player_three_score"
                android:src="@drawable/farmer"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/player_three_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/player_three_score"
                android:layout_alignTop="@id/player_three_icon"
                android:layout_toEndOf="@id/player_three_icon"
                android:gravity="center"
                android:text="@string/player_three_name"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/player_three_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/wof_blue"
                android:gravity="center"
                android:text="@string/placeholder_money"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/wheel_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/wheel"
            android:layout_width="450dp"
            android:layout_height="450dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:rotation="7.5"
            android:src="@drawable/wheel"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/wheel_arrow"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-16dp"
            android:src="@drawable/arrow"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/wheel_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />


    </RelativeLayout>



</RelativeLayout>